Layout issues fixed

--- a/mcidashboard/mcidashboard-front/src/css/overview.css
+++ b/mcidashboard/mcidashboard-front/src/css/overview.css
@@ -40,6 +40,8 @@
     width: 60%;
     min-width: 700px;
     overflow: hidden;
+    flex: 1;
+    margin-right: 30px;
 }
 
 #importance-card {
@@ -47,7 +49,9 @@
 }
 
 #ml-card {
+    flex: 1;
     min-width: 500px;
+    margin-right: 30px;
 }
 
 .personal-info-h {
